--- a/index.html
+++ b/index.html
@@ -1,56 +1,178 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <link rel="shortcut icon" href="https://www.google.com/s2/favicons?domain=wwww.waynetipton.com" type="image/png">
-  <script src="https://kit.fontawesome.com/1014e0639c.js" crossorigin="anonymous"></script>
+ <script src="https://kit.fontawesome.com/1014e0639c.js" crossorigin="anonymous"></script>
+ <link rel="stylesheet" href="css/utilities.css">
  <link rel="stylesheet" href="css/style.css">
+
 
  <title>Loruki | Could Hosting For Everyone</title>
 </head>
+
 <body>
-<!-- Nav Bar -->
-<div class="navbar">
- <div class="container flex">
-  <h1 class="logo">Loruki</h1>
+ <!-- Nav Bar -->
+ <div class="navbar">
+  <div class="container flex">
+   <h1 class="logo">Loruki</h1>
+   <nav>
+    <ul>
+     <li><a href="index.html">Home</a></li>
+     <li><a href="features.html">Features</a></li>
+     <li><a href="docs.html">Docs</a></li>
+    </ul>
+   </nav>
+  </div>
+ </div>
+
+ <!-- Showcase -->
+ <section class="showcase">
+  <div class="container grid">
+   <div class="showcase-text">
+    <h1>Easier Deployment</h1>
+    <p>Deploy webs apps of all kinds, from large scale enterprise APIs to static websites for individuals. Fill out the
+     form to try a demo of our platform.</p>
+    <a href="features.html" class="btn btn-outline">Read more</a>
+   </div>
+   <div class="showcase-form card">
+    <h2>Request a Demo</h2>
+    <form name="contact" method="POST" netlify-honeypot="bot-field" data-netlify="true">
+     <input type="hidden" name="form-name" value="contact">
+     <p class="hidden">
+      <label for="">Don't fill this out if you're human: <input name="bot-field"></label>
+     </p>
+     <div class="form-control">
+      <input type="text" name="name" placeholder="Name" required>
+     </div>
+     <div class="form-control">
+      <input type="text" name="company" placeholder="Company Name" required>
+     </div>
+     <div class="form-control">
+      <input type="email" name="email" placeholder="Email" required>
+     </div>
+     <input type="submit" value="Send" class="btn btn-primary">
+    </form>
+   </div>
+  </div>
+ </section>
+ <!-- Stats -->
+ <section class="stats">
+  <div class="container">
+   <h3 class="stats-heading text-center my-1">
+    Welcome to the best platform for building applications of all types with modern architecture and scaling.
+   </h3>
+   <div class="grid grid-3 text-center my-4">
+    <div>
+     <i class="fas fa-server fa-3x"></i>
+     <h3>10,121,409</h3>
+     <p class="text-secondary">Deployments</p>
+
+    </div>
+    <div>
+     <i class="fas fa-project-diagram fa-3x"></i>
+     <h3>12,358,269</h3>
+     <p class="text-secondary">Projects</p>
+    </div>
+    <div>
+     <i class="fas fa-upload fa-3x"></i>
+     <h3>988 TB</h3>
+     <p class="text-secondary">Published</p>
+    </div>
+   </div>
+  </div>
+ </section>
+
+ <!-- CLI -->
+ <section class="cli">
+  <div class="container grid">
+   <img src="images/cli.png" alt="">
+   <div class="card">
+    <h3>Easy to use, cross platform cli</h3>
+   </div>
+   <div class="card">
+    <h3>Deploy in seconds</h3>
+   </div>
+  </div>
+ </section>
+
+ <!-- Extreme cloud hosting -->
+ <section class="cloud bg-primary my-2 py-2">
+  <div class="continer grid">
+   <div class="text-center">
+    <h2 class="lg">Extreme Cloud Hosting</h2>
+    <p class="lead my-1">Cloud hosting like you've never seen. Fast, efficient, and scalable </p>
+    <a href="features.html" class="btn btn-dark">Read More</a>
+   </div>
+   <img src="images/cloud.png" alt="">
+  </div>
+ </section>
+
+ <!-- languages -->
+ <section class="languages">
+  <h2 class="md text-center my-2">
+   Supported languages
+  </h2>
+  <div class="container flex">
+   <div class="card">
+    <h4>Node.js</h4>
+    <img src="images/logos/node.png" alt="">
+   </div>
+   <div class="card">
+    <h4>Clojure</h4>
+    <img src="images/logos/clojure.png" alt="">
+   </div>
+   <div class="card">
+    <h4>C#</h4>
+    <img src="images/logos/csharp.png" alt="">
+   </div>
+   <div class="card">
+    <h4>PHP</h4>
+    <img src="images/logos/php.png" alt="">
+   </div>
+   <div class="card">
+    <h4>Python</h4>
+    <img src="images/logos/python.png" alt="">
+   </div>
+   <div class="card">
+    <h4>Ruby</h4>
+    <img src="images/logos/ruby.png" alt="">
+   </div>
+   <div class="card">
+    <h4>Scala</h4>
+    <img src="images/logos/scala.png" alt="">
+   </div>
+  </div>
+  </div>
+  </div>
+ </section>
+ <!-- Footer -->
+ <footer class="footer bg-dark py-5">
+  <div class="container grid grid-3">
+  <div>
+    <h1>Loruki</h1>
+    <p>Copyright &copy; 2021</p>
+  </div>
+  
   <nav>
    <ul>
     <li><a href="index.html">Home</a></li>
     <li><a href="features.html">Features</a></li>
     <li><a href="docs.html">Docs</a></li>
-    
    </ul>
   </nav>
- </div>
-</div>
-
-<!-- Showcase -->
-<section class="showcase">
- <div class="container grid">
-  <div class="showcase-text">
-   <h1>Easier Deployment</h1>
-   <p>Deploy webs apps of all kinds, from large scale enterprise APIs to static websites for individuals.  Fill out the form to try a demo of our platform.</p>
-   <a href="features.html" class="btn btn-outline">Read more</a>
+  <div class="social">
+   <a href="#"><i class="fab fa-github fa-2x"></i></a>
+   <a href="#"><i class="fab fa-facebook fa-2x"></i></a>
+   <a href="#"><i class="fab fa-instagram fa-2x"></i></a>
+   <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
   </div>
-  <div class="showcase-form card">
-   <h2>Request a Demo</h2>
-   <form>
-    <div class="form-control">
-     <input type="text" name="name" placeholder="Name" required>
-    </div>
-    <div class="form-control">
-     <input type="text" name="company" placeholder="Company Name" required>
-    </div><div class="form-control">
-     <input type="email" name="email" placeholder="Email" required>
-    </div>
-    <input type="submit" value="Send" class="btn btn-primary">
-   </form>
-
   </div>
- </div>
-</section>
+ </footer>
  <!-- Script -->
  <script src="script.js"></script>
 </body>
+
 </html>
