--- a/features.html
+++ b/features.html
@@ -9,7 +9,6 @@
  <link rel="stylesheet" href="css/utilities.css">
  <link rel="stylesheet" href="css/style.css">
 
-
  <title>Loruki | Could Hosting For Everyone</title>
 </head>
 
@@ -44,22 +43,27 @@
  <!-- Sub Head -->
  <section class="features-sub-head bg-light py-3">
   <div class="container grid">
-    <div>
-     <h1 class="md">Loruki Platform</h1>
-     <p>
-      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae itaque voluptatibus nesciunt et explicabo doloremque amet eaque cum minus ea ducimus molestiae dolore fugit atque accusantium, asperiores quidem accusamus. Sed.
-     </p>
-    </div>
-    <img src="/images/server2.png" alt="">
+   <div>
+    <h1 class="md">Loruki Platform</h1>
+    <p>
+     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae itaque voluptatibus nesciunt et explicabo doloremque
+     amet eaque cum minus ea ducimus molestiae dolore fugit atque accusantium, asperiores quidem accusamus. Sed.
+    </p>
+   </div>
+   <img src="/images/server2.png" alt="">
   </div>
  </section>
-<!-- Features Main -->
-<section class="features-main my-2">
- <div class="container grid grid-3">
-  <div class="card flex">
-   <i class="fas fa-server fa-3x"></i>
-   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem mollitia omnis harum facilis aliquam, quidem dolor, similique quisquam adipisci optio at provident fugiat nobis deleniti dolores fuga laboriosam magnam autem.</p>
-  </div>
+
+ <!-- Features Main -->
+ <section class="features-main my-2">
+  <div class="container grid grid-3">
+
+   <div class="card flex">
+    <i class="fas fa-server fa-3x"></i>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem mollitia omnis harum facilis aliquam,
+     quidem dolor, similique quisquam adipisci optio at provident fugiat nobis deleniti dolores fuga laboriosam magnam
+     autem.</p>
+   </div>
 
    <div class="card flex">
     <i class="fas fa-power-off fa-3x"></i>
@@ -68,32 +72,35 @@
      autem.</p>
    </div>
 
-    <div class="card flex">
-     <i class="fas fa-upload fa-3x"></i>
-     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem mollitia omnis harum facilis aliquam,
-      quidem dolor, similique quisquam adipisci optio at provident fugiat nobis deleniti dolores fuga laboriosam magnam
-      autem.</p>
-    </div>
-     <div class="card flex">
-      <i class="fas fa-network-wired fa-3x"></i>
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem mollitia omnis harum facilis aliquam,
-       quidem dolor, similique quisquam adipisci optio at provident fugiat nobis deleniti dolores fuga laboriosam magnam
-       autem.</p>
-     </div>
-      <div class="card flex">
-       <i class="fas fa-laptop-code fa-3x"></i>
-       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem mollitia omnis harum facilis aliquam,
-        quidem dolor, similique quisquam adipisci optio at provident fugiat nobis deleniti dolores fuga laboriosam magnam
-        autem.</p>
-      </div>
-       <div class="card flex">
-        <i class="fas fa-database fa-3x"></i>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem mollitia omnis harum facilis aliquam,
-         quidem dolor, similique quisquam adipisci optio at provident fugiat nobis deleniti dolores fuga laboriosam magnam
-         autem.</p>
-       </div>
- </div>
-</section>
+   <div class="card flex">
+    <i class="fas fa-upload fa-3x"></i>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem mollitia omnis harum facilis aliquam,
+     quidem dolor, similique quisquam adipisci optio at provident fugiat nobis deleniti dolores fuga laboriosam magnam
+     autem.</p>
+   </div>
+
+   <div class="card flex">
+    <i class="fas fa-network-wired fa-3x"></i>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem mollitia omnis harum facilis aliquam,
+     quidem dolor, similique quisquam adipisci optio at provident fugiat nobis deleniti dolores fuga laboriosam magnam
+     autem.</p>
+   </div>
+
+   <div class="card flex">
+    <i class="fas fa-laptop-code fa-3x"></i>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem mollitia omnis harum facilis aliquam,
+     quidem dolor, similique quisquam adipisci optio at provident fugiat nobis deleniti dolores fuga laboriosam magnam
+     autem.</p>
+   </div>
+
+   <div class="card flex">
+    <i class="fas fa-database fa-3x"></i>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem mollitia omnis harum facilis aliquam,
+     quidem dolor, similique quisquam adipisci optio at provident fugiat nobis deleniti dolores fuga laboriosam magnam
+     autem.</p>
+   </div>
+  </div>
+ </section>
 
  <!-- Footer -->
  <footer class="footer bg-dark py-5">
@@ -118,6 +125,7 @@
    </div>
   </div>
  </footer>
+
  <!-- Script -->
  <script src="script.js"></script>
 </body>
